# portfolio

./: .ai-rules  .gitignore  .lighthouserc.json  .prettierignore  GEMINI.md  README.md  package.json  portfolio.db  vercel.json
backend/: .gitignore  README.md  admin.py  auth.py  broadcaster.py  cache.py  config.py  database.py  main.py  middleware.py  models.py  portfolio.db  pyproject.toml  requirements.txt  seed.py  seed_cms.py  storage.py
backend/migrations/: env.py
backend/migrations/versions/: 3a40d1099870_initial_baseline.py  7465209f01ef_add_telegrammessagemap_table.py  908a919dc65c_add_module_and_category_to_chatmessage.py
backend/portfolio/: db.sqlite3
backend/portfolio/contact/: models.py  urls.py  views.py
backend/portfolio/portfolio/: settings.py  urls.py
backend/portfolio/projects/: models.py  serializers.py  urls.py  views.py
backend/responses/: about.py  contact.py  experience.py  fallback.py  fun.py  greetings.py  hr_assessment.py  projects.py  technical_backend.py  technical_behavioral.py  technical_core.py  technical_devops.py  technical_frontend.py  thanks.py
backend/responses/fixtures/: about.json  contact.json  content_about.json  content_blog.json  content_experience.json  content_projects.json  fun.json  (+11 more)
backend/routers/: chat.py  public.py
backend/tests/: conftest.py  manual_test_chat.py  test_admin.py  test_basic.py  test_chat.py  test_nlu_optimization.py  test_public_cms.py  test_rate_limiting.py  test_security.py  test_storage.py  test_telegram_bridge.py  test_v0_2_4_edge_cases.py  test_v0_2_4_features.py  test_validation.py
(+132 files in other folders)
